@@ -2,7 +2,6 @@ package be.labofitness.labo_fitness.bll.service.impl;
 import be.labofitness.labo_fitness.bll.exception.Exist.AlreadyExistException;
 import be.labofitness.labo_fitness.bll.exception.Exist.DoesntExistException;
 import be.labofitness.labo_fitness.bll.exception.Unauthorize.UnauthorizedException;
-import be.labofitness.labo_fitness.bll.exception.notMatching.NotMatchingException;
 import be.labofitness.labo_fitness.bll.model.coach.ManageEventInscription.ManageEventInscriptionRequest;
 import be.labofitness.labo_fitness.bll.model.coach.ManageEventInscription.ManageEventInscriptionResponse;
 import be.labofitness.labo_fitness.bll.model.coach.manageAccount.CoachManageAccountRequest;
@@ -11,8 +10,6 @@ import be.labofitness.labo_fitness.bll.model.coach.manageAccount.updateSpecificI
 import be.labofitness.labo_fitness.bll.model.coach.manageAccount.updateSpecificInformations.CoachUpdateSpecificsInformationsResponse;
 import be.labofitness.labo_fitness.bll.model.planning.CoachPlanningRequest;
 import be.labofitness.labo_fitness.bll.model.planning.PlanningResponse;
-import be.labofitness.labo_fitness.bll.model.coach.manageAccount.changePassword.CoachChangePasswordRequest;
-import be.labofitness.labo_fitness.bll.model.coach.manageAccount.changePassword.CoachChangePasswordResponse;
 import be.labofitness.labo_fitness.bll.service.service.CoachService;
 import be.labofitness.labo_fitness.bll.service.service.CompetitionService;
 import be.labofitness.labo_fitness.bll.service.service.PlanningService;
@@ -26,11 +23,13 @@ import be.labofitness.labo_fitness.domain.entity.TrainingSession;
 import be.labofitness.labo_fitness.domain.entity.base.Address;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
 import static be.labofitness.labo_fitness.il.utils.LaboFitnessUtil.getCurrentMethodName;
 /**
  * Implementation of the {@link CoachService} interface.
@@ -43,7 +42,6 @@ public class CoachServiceImpl implements CoachService {
     private final CoachRepository coachRepository;
     private final SecurityService securityService;
     private final PlanningService planningService;
-    private final PasswordEncoder passwordEncoder;
     private final CompetitionService competitionService;
     private final TrainingSessionService trainingService;
     private final UserRepository userRepository;
@@ -57,74 +55,48 @@ public class CoachServiceImpl implements CoachService {
      * @return A {@link PlanningResponse} object containing the planned events.
      */
     @Override
-    public PlanningResponse getPlanning(CoachPlanningRequest request) {
-        return new PlanningResponse(
-                getStartDates(request),
-                getEndDates(request),
-                getEventNames(request)
-        );
+    public List<PlanningResponse> getPlanning(CoachPlanningRequest request) {
+        return IntStream.range(0, getEventDetails(request, Competition::getStartDate, TrainingSession::getStartDate).size())
+                .mapToObj(i -> new PlanningResponse(
+                        getEventDetails(request, Competition::getStartDate, TrainingSession::getStartDate).get(i),
+                        getEventDetails(request, Competition::getEndDate, TrainingSession::getEndDate).get(i),
+                        getEventDetails(request, Competition::getName, TrainingSession::getName).get(i)))
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Retrieves the start dates of events based on the provided {@link Coach} planning request.
-     *
-     * @param request The {@link Coach} planning request containing parameters for filtering events.
-     * @return A list of {@link LocalDateTime} objects representing the start dates of events.
-     */
-    private List<LocalDateTime> getStartDates(CoachPlanningRequest request) {
-        boolean includeOnlyComp = request.sports() != null;
-        boolean includeAll = (request.types() == null || request.types().isEmpty()) && !includeOnlyComp;
+    private <T> List<T> getEventDetails(CoachPlanningRequest request, Function<Competition, T> compMapper, Function<TrainingSession, T> trainMapper) {
+        boolean includeOnlyComp =
+                request.sports() != null
+                || (request.types() != null
+                && request.types().contains("competition")
+                && !request.types().contains("training"));
 
-        if (includeOnlyComp || includeAll) {
+        boolean includeOnlyTrain =
+                request.sports() == null
+                && (request.types() != null
+                &&  request.types().contains("training")
+                && !(request.types().contains("competition")));
+
+        if (includeOnlyComp) {
             return planningService.getAllCoachCompetitions(request).stream()
-                    .map(Competition::getStartDate)
-                    .collect(Collectors.toList());
-        } else {
-            return planningService.getAllCoachTrainings(request).stream()
-                    .map(TrainingSession::getStartDate)
+                    .map(compMapper)
                     .collect(Collectors.toList());
         }
-    }
-
-    /**
-     * Retrieves the end dates of events based on the provided {@link Coach} planning request.
-     *
-     * @param request The {@link Coach} planning request containing parameters for filtering events.
-     * @return A list of {@link LocalDateTime} objects representing the end dates of events.
-     */
-    private List<LocalDateTime> getEndDates(CoachPlanningRequest request) {
-        boolean includeOnlyComp = request.sports() != null;
-        boolean includeAll = request.types() == null || request.types().isEmpty();
-
-        if (includeOnlyComp || includeAll) {
-            return planningService.getAllCoachCompetitions(request).stream()
-                    .map(Competition::getEndDate)
-                    .collect(Collectors.toList());
-        } else {
+        else if (includeOnlyTrain) {
             return planningService.getAllCoachTrainings(request).stream()
-                    .map(TrainingSession::getEndDate)
+                    .map(trainMapper)
                     .collect(Collectors.toList());
         }
-    }
-
-    /**
-     * Retrieves the names of events based on the provided {@link Coach} planning request.
-     *
-     * @param request The {@link Coach} planning request containing parameters for filtering events.
-     * @return A list of strings representing the names of events.
-     */
-    private List<String> getEventNames(CoachPlanningRequest request) {
-        boolean includeOnlyComp = request.sports() != null;
-        boolean includeAll = request.types() == null || request.types().isEmpty();
-
-        if (includeOnlyComp || includeAll || request.types().contains("competition")) {
-            return planningService.getAllCoachCompetitions(request).stream()
-                    .map(Competition::getName)
+        else {
+            List<T> details = planningService.getAllCoachTrainings(request).stream()
+                    .map(trainMapper)
                     .collect(Collectors.toList());
-        } else {
-            return planningService.getAllCoachTrainings(request).stream()
-                    .map(TrainingSession::getName)
-                    .collect(Collectors.toList());
+            List<T> compDetails = planningService.getAllCoachCompetitions(request).stream()
+                    .map(compMapper)
+                    .toList();
+
+            details.addAll(compDetails);
+            return details;
         }
     }
 
@@ -145,42 +117,22 @@ public class CoachServiceImpl implements CoachService {
         Coach coach = securityService.getAuthentication(Coach.class);
 
         if (!coach.getEmail().equals(request.email())) {
-            if (!userRepository.existsByEmail(request.email())) {  coach.setEmail(request.email());  }
-            else{
+            if (!userRepository.existsByEmail(request.email())) {
+                coach.setEmail(request.email());
+            } else {
                 throw new AlreadyExistException("Email: " + request.email() + " already exists");
             }
         }
+
         coach.setName(request.name());
         coach.setLastname(request.lastName());
         coach.setGender(request.gender());
         coach.setAddress(new Address(request.street(), request.number(), request.city(), request.zipCode()));
         coach.setRemote(request.isRemote());
         coach.setPriceHour(request.pricePerHour());
-
         coachRepository.save(coach);
 
         return CoachManageAccountResponse.fromEntity(coach, getCurrentMethodName());
-    }
-
-    /**
-     * Update the password of an {@link Coach} account
-     * @param request of the {@link CoachChangePasswordRequest} to update
-     * @return response {@link CoachChangePasswordResponse} with a message
-     */
-    @Override
-    @Transactional
-    public CoachChangePasswordResponse changePassword(CoachChangePasswordRequest request) {
-
-        Coach coach = securityService.getAuthentication(Coach.class);
-
-        if(!passwordEncoder.matches(request.oldPassword(),coach.getPassword())){
-
-            throw new NotMatchingException("wrong password");
-        }
-        coach.setPassword(passwordEncoder.encode(request.newPassword()));
-        coachRepository.save(coach);
-
-        return CoachChangePasswordResponse.fromEntity(coach, getCurrentMethodName());
     }
 
     /**
@@ -212,9 +164,7 @@ public class CoachServiceImpl implements CoachService {
      * @return the {@link Coach} with the given ID
      */
     @Override
-    public Coach getOne(Long id) {
-        return null;
-    }
+    public Coach getOne(Long id) {return null;}
 
     @Override
     public Coach getOneByEmail(String email) {
@@ -228,9 +178,7 @@ public class CoachServiceImpl implements CoachService {
      * @return a list of all {@link Coach}
      */
     @Override
-    public List<Coach> getAll() {
-        return coachRepository.findAll();
-    }
+    public List<Coach> getAll() {return coachRepository.findAll();}
 
     /**
      * Creates a new {@link Coach}.
@@ -239,9 +187,7 @@ public class CoachServiceImpl implements CoachService {
      * @return the created {@link Coach}
      */
     @Override
-    public Coach create(Coach entity) {
-        return coachRepository.save(entity);
-    }
+    public Coach create(Coach entity) {return coachRepository.save(entity);}
 
     /**
      * Updates an existing {@link Coach}.
@@ -250,9 +196,7 @@ public class CoachServiceImpl implements CoachService {
      * @return the updated {@link Coach}
      */
     @Override
-    public Coach update(Coach entity) {
-        return null;
-    }
+    public Coach update(Coach entity) {return null;}
 
     /**
      * Deletes an {@link Coach} by its ID.
@@ -261,9 +205,7 @@ public class CoachServiceImpl implements CoachService {
      * @return the deleted {@link Coach}, or null if not found
      */
     @Override
-    public Coach delete(Long id) {
-        return null;
-    }
+    public Coach delete(Long id) {return null;}
 
     // endregion
 
@@ -329,5 +271,14 @@ public class CoachServiceImpl implements CoachService {
     }
 
     //endregion
+
+    // region SPECIFICATION
+
+    @Override
+    public List<Coach> getCoachBySpecification(Specification<Coach> specification) {
+        return coachRepository.findAll(specification);
+    }
+
+    // endregion
 
 }
